// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot with props 1`] = `
<div
  className="pad"
  onClick={[Function]}
>
  test
</div>
`;

exports[`matches snapshot without props 1`] = `
<div
  className="pad"
  onClick={[Function]}
/>
`;
